--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
   "license": "UNLICENSED",
   "dependencies": {
     "express": "^4.18.3",
+    "mysql2": "^3.9.4",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
-    "pino": "^8.19.0",
-    "sqlite3": "^5.1.7"
+    "pino": "^8.19.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
