--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "test": "test"
   },
   "scripts": {
-    "start": "node serve.js",
-    "dev": "nodemon serve.js",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -19,11 +19,16 @@
   "author": "darkridder",
   "license": "UNLICENSED",
   "dependencies": {
+    "connect-flash": "^0.1.1",
+    "connect-slashes": "^1.4.0",
     "express": "^4.18.3",
+    "express-session": "^1.18.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.4",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
-    "pino": "^8.19.0"
+    "pino": "^8.19.0",
+    "pug": "^3.0.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
