--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   "author": "darkridder",
   "license": "UNLICENSED",
   "dependencies": {
+    "compression": "^1.7.4",
     "connect-flash": "^0.1.1",
     "connect-slashes": "^1.4.0",
     "express": "^4.18.3",
+    "express-mysql-session": "^3.0.1",
     "express-session": "^1.18.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.4",
