--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "author": "darkridder",
   "license": "UNLICENSED",
   "dependencies": {
+    "coingecko-api-v3": "^0.0.29",
     "compression": "^1.7.4",
     "connect-flash": "^0.1.1",
     "connect-slashes": "^1.4.0",
