--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "moment": "^2.30.1",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.4",
+    "node-2fa": "^2.0.3",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "pino": "^8.19.0",
